force-app/main/default/objects/Survey_Questions_Template__c/Survey_Questions_Template__c.object-meta.xml
<CustomObject>
    <label>Survey Questions Template</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Questions Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>