force-app/main/default/objects/Survey_Questions_Template__c/fields/Answer_Yes_No__c.field-meta.xml
<CustomField>
    <fullName>Answer_Yes_No__c</fullName>
    <label>Answer [Yes / No]</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>