force-app/main/default/objects/Survey_Questions_Template__c/fields/Question_Text_Number__c.field-meta.xml
<CustomField>
    <fullName>Question_Text_Number__c</fullName>
    <label>Question Text Number</label>
    <length>2</length>
    <type>Text</type>
</CustomField>