force-app/main/default/objects/Survey_Questions_Template__c/fields/Reason_For_Low_Rating__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Low_Rating__c</fullName>
    <label>Reason For Low Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>