force-app/main/default/objects/Survey_Questions_Template__c/fields/Survey_Template__c.field-meta.xml
<CustomField>
    <fullName>Survey_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey Template</label>
    <referenceTo>Survey_Template__c</referenceTo>
    <relationshipLabel>Survey Questions Templates</relationshipLabel>
    <relationshipName>Survey_Questions_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>