force-app/main/default/objects/Survey_Questions_Template__c/fields/Type_of_Question__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Question__c</fullName>
    <label>Type of Question</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PROJECT FEEDBACK</fullName>
            </value>
            <value>
                <fullName>SALES STAFF EXPERIENCE</fullName>
            </value>
            <value>
                <fullName>SITE EXPERIENCE</fullName>
            </value>
            <value>
                <fullName>OTHER FEEDBACK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>