force-app/main/default/objects/Survey_Questions_Template__c/recordTypes/Free_Text_Questions.recordType-meta.xml
<RecordType>
    <fullName>Free_Text_Questions</fullName>
    <active>true</active>
    <description>This Record Type has Answers as Free Text</description>
    <label>Free Text Questions</label>
</RecordType>