force-app/main/default/objects/Survey_Questions_Template__c/recordTypes/Picklist_Questions.recordType-meta.xml
<RecordType>
    <fullName>Picklist_Questions</fullName>
    <active>true</active>
    <description>This Record Type has Answers as Picklist</description>
    <label>Picklist Questions</label>
</RecordType>