force-app/main/default/objects/Survey_Questions_Template__c/recordTypes/Yes_or_No_Questions.recordType-meta.xml
<RecordType>
    <fullName>Yes_or_No_Questions</fullName>
    <active>true</active>
    <description>This Record Type has Answers as Picklist [ Yes / No ]</description>
    <label>Yes or No Questions</label>
</RecordType>